# SIK-robots

./: CMakeLists.txt  README.md
src-client/: definitions.cc  definitions.h  includes.h  main.cc  main.cpp  messages.cc  messages.h
src-client/data_types/: arguments.h  bomb.h  bytes.cc  bytes.h  definitions.h  events.cc  events.h  game_state.h  list.h  map.h  player.h  position.h  set.h  sockets_info.h  string.h  threads_info.h  uint.h  usings.h
src-client/messages/: client_messages.h  draw_messages.h  gui_messages.h  server_messages.h
src-server/: includes.h  main.cc  main.cpp  messages.cc  messages.h  threads.cpp  threads.h
src-server/data_types/: action.cc  action.h  arguments.cc  arguments.h  bomb.h  bytes.h  definitions.cc  definitions.h  events.cc  events.h  game_state.cc  game_state.h  list.h  map.h  player.h  position.h  sockets_info.h  usings.h
src-server/messages/: client_messages.cc  client_messages.h  server_messages.h
